Fix grid moving out of box
Fixed by changing border property of individual grids to an outline
property per a stack overflow post I found. Border affects the box model
and was messign with the calculations I was doing to figure out the
grid size. Still don't understand it too well but understand the general
idea. The extra space taken up by the border resulted in grids pushed
out of grid box.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  /* align-items: stretch; */
   justify-content: center;
 }
 
@@ -29,9 +29,12 @@ body {
   gap: 0px;
   padding: 0px;
   margin: 0px;
-  flex-grow: 0;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .grid-square {
-  border: 1px lightgray solid;
+  flex-grow: 1;
+  flex-shrink: 1;
+  outline: 1px lightgray solid;
 }
